syntax = "proto3";

option go_package = "vouchergrpc/";


service VoucherServiceGRPC {
  rpc CheckingVoucher(CheckingVoucherRequest) returns (CheckingVoucherResponse){}
  rpc ApplyVoucher(UseVoucherRequest) returns(ApplyVoucherResponse){}
}

message UseVoucherRequest {
  string order_id = 1;
  repeated string vouchers = 2;
}

message VoucherRespDetail {
  // Define the fields of VoucherRespDetail if needed
  // For example:
  // string some_field = 1;
}

message CheckingVoucherResponse {
  bool is_success = 1;
  repeated VoucherRespDetail items = 2;
}

message ApplyVoucherResponse {
  bool is_success = 1;
}

message CheckingVoucherRequest {
  repeated string vouchers = 1;
  int32 order_total_amount = 2;
  int32 payment_method = 3;
  string user_id = 4;
}